--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "repository": "git@github.com:StephenGrider/ReduxSimpleStarter.git",
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "test": "./node_modules/.bin/wdio wdio.conf.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,8 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "mocha": "^3.4.2",
+    "webdriverio": "^4.2.3",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
@@ -23,6 +26,7 @@
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
-    "redux": "^3.0.4"
+    "redux": "^3.0.4",
+    "wdio-spec-reporter": "^0.1.0"
   }
 }
