--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "mocha": "^3.4.2",
+    "wdio-mocha-framework": "^0.5.10",
+    "wdio-selenium-standalone-service": "0.0.9",
+    "wdio-spec-reporter": "^0.1.0",
     "webdriverio": "^4.2.3",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
