--- a/package.json
+++ b/package.json
@@ -30,8 +30,6 @@
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
-    "redux": "^3.0.4",
-    "wdio-mocha-framework": "^0.5.10",
-    "wdio-spec-reporter": "^0.1.0"
+    "redux": "^3.0.4"
   }
 }
